Closed Bug 453484 Opened 16 years ago Closed 16 years ago

Can't build accessibility with DEBUG_CC

Categories

(Core :: Disability Access APIs, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: surkov)

Details

Attachments

(1 file)

In nsDocAccessible.cpp, the ElementTraverser method passes an nsIAccessNode* as the second arg to NS_CYCLE_COLLECTION_NOTE_EDGE_NAME.  The second arg should be a char*.
Also, NS_IMPL_CYCLE_COLLECTION_TRAVERSE_BEGIN_INHERITED(nsApplicationAccessible,
has the same problem.
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #336771 - Flags: superreview?(bzbarsky)
Attachment #336771 - Flags: review?(aaronleventhal)
Attachment #336771 - Flags: superreview?(bzbarsky) → superreview+
Attachment #336771 - Flags: review?(aaronleventhal) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: