Bug 453484 - Can't build accessibility with DEBUG_CC, r=aaronlev, sr=bz